--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img class="avatarImage" src="./images/me.png" alt="Camille Brunel"/>
                 </div>
                 <div class="headerTitle"> Camille Brunel</div>
-                <div class="headerBio"> <b>PhD student</b> at Inria </div>
+                <div class="headerBio"> <strong>PhD student</strong> at Inria </div>
                 <div class="headerLinks">
                     <ul>
                         <li style="background-image: url(images/location_icon.svg)"> Paris, France</li>
@@ -30,11 +30,11 @@
         <section id="about" class="work fullPage-section">
             <h1 class="section-title"> Hello! </h1>
             <div class="section-content" >
-		<p> I'm <b>Camille</b>. I recently defended my PhD in October 2021 advised by <a href="https://www.labri.fr/perso/barla/blog/" target="_blank">Pascal Barla</a>, <a href="https://www.labri.fr/perso/pbenard/" target="_blank">Pierre Bénard</a> and <a href="https://www.labri.fr/perso/guenneba/" target="_blank">Gaël Guennebaud</a> in the <a href="https://manao.inria.fr/" target="_blank">Manao team</a> at Inria Bordeaux. My research focuses in <b>Computer Graphics</b> and <b>Geometry Processing</b> and more precisely on geometric deformation resulting from contacts in computer animation. I obtained a <a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-award" target="_blank">MITACS Globalink Research Award - Inria</a> for an internship at Université de Montréal in 2020, however due to the covid-19 situation, I was unable to use it.</br>
-		I have always wanted to apply my knowledge to <b>visual</b> works. Above all, my major goal is to provide <b>artists</b> the tools they need to perform their art without thinking about the complexity of the technology behind the softwares they use.
+		<p> I'm <strong>Camille</strong>. I recently defended my PhD in October 2021 advised by <a href="https://www.labri.fr/perso/barla/blog/" target="_blank">Pascal Barla</a>, <a href="https://www.labri.fr/perso/pbenard/" target="_blank">Pierre Bénard</a> and <a href="https://www.labri.fr/perso/guenneba/" target="_blank">Gaël Guennebaud</a> in the <a href="https://manao.inria.fr/" target="_blank">Manao team</a> at Inria Bordeaux. My research focuses in <strong>Computer Graphics</strong> and <strong>Geometry Processing</strong> and more precisely on geometric deformation resulting from contacts in computer animation.<br> I obtained a <a href="https://www.mitacs.ca/en/programs/globalink/globalink-research-award" target="_blank">MITACS Globalink Research Award - Inria</a> for an internship at Université de Montréal in 2020, however due to the covid-19 situation, I was unable to use it.<br>
+		I have always wanted to apply my knowledge to <strong>visual</strong> works. Above all, my major goal is to provide <strong>artists</strong> the tools they need to perform their art without thinking about the complexity of the technology behind the softwares they use.
 		</p>
 		<p>
-		Before this PhD, I haved worked for 5 years in <a href="https://www.3ds.com/" target="_blank">Dassault Systèmes</a> near Paris as an UI infrastructure developer.</br>
+		Before this PhD, I haved worked for 5 years in <a href="https://www.3ds.com/" target="_blank">Dassault Systèmes</a> near Paris as an UI infrastructure developer.<br>
 		I obtained my master degree in computer science and applied mathematics at <a href="https://ensimag.grenoble-inp.fr/en" target="_blank">ENSIMAG</a> (Ecole Nationale Supérieure d'Informatique et de Mathématiques Appliquées) in Grenoble, France.
 		</p>
             </div>
@@ -48,7 +48,7 @@
                     <img class="Media-figure" src="./images/rep_image_SIG21.png" alt="Ball squashed by a hand">
                     <div class="Media-body">
                         <p class="Media-title"> A Time-independent Deformer for Elastic Contacts</p>
-                        <p class="Media-authors"> <b>Camille BRUNEL</b>, Pierre BENARD, Gaël GUENNEBAUD</p>
+                        <p class="Media-authors"> <strong>Camille BRUNEL</strong>, <a href="https://www.labri.fr/perso/pbenard/" target="_blank">Pierre BENARD</a>, <a href="https://www.labri.fr/perso/guenneba/" target="_blank">Gaël GUENNEBAUD</a></p>
                         <p class="Media-conference"> ACM SIGGRAPH, 2021</p>
                         <p class="Media-links"> <a href="https://hal.inria.fr/hal-03227883/document" target="_blank">PDF</a> | <a href="https://vimeo.com/547377135" target="_blank">Video</a> | Talk (Available soon!) </p>
                     </div>
@@ -58,7 +58,7 @@
                     <img class="Media-figure" src="./images/rep_image_I3D20.png" alt="Finger sliding on an octopus head">
                     <div class="Media-body">
                         <p class="Media-title"> A Time-independent Deformer for Elastic-rigid Contacts <p>
-                        <p class="Media-authors"> <b>Camille BRUNEL</b>, Pierre BENARD, Gaël GUENNEBAUD, Pascal BARLA</p>
+                        <p class="Media-authors"> <strong>Camille BRUNEL</strong>, <a href="https://www.labri.fr/perso/pbenard/" target="_blank">Pierre BENARD</a>, <a href="https://www.labri.fr/perso/guenneba/" target="_blank">Gaël GUENNEBAUD</a>, <a href="https://www.labri.fr/perso/barla/blog/" target="_blank">Pascal BARLA</a></p>
                         <p class="Media-conference"> Proceedings of the ACM on Computer Graphics and Interactive Techniques, 2020</p>
                         <p class="Media-links"> <a href="https://hal.inria.fr/hal-02541299/document" target="_blank">PDF</a>  | <a href="https://vimeo.com/407545452" target="_blank">Video</a> | Talk (Available soon!) </p>
                     </div>
@@ -72,7 +72,7 @@
             <div class="section-content" >
                 <div>
                     <p>
-                        Feel free to contact me via <a href="https://www.linkedin.com/in/camille-brunel-9b507391" target="_blank">LinkedIn</a> or directly at: &nbsp; camille<b> [dot] </b>brunel<b> [at] </b>inria<b> [dot] </b>fr
+                        Feel free to contact me via <a href="https://www.linkedin.com/in/camille-brunel-9b507391" target="_blank">LinkedIn</a> or directly at: &nbsp; camille<strong> [dot] </strong>brunel<strong> [at] </strong>inria<strong> [dot] </strong>fr
                     </p>
                 </div>
             </div>
