--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Camille Brunel</title>
-            <link rel="stylesheet" href="css/style.css" media="screen">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Camille Brunel</title>
+	<meta property="og:type" content="website"/>
+	<meta property="og:title" content="Camille Brunel"/>
+        <meta property="og:url" content="https://camillebr.github.io/"/>
+        <meta property="og:description" content="Personal website of Camille Brunel"/>
+        <link rel="stylesheet" href="css/style.css" media="screen"/>
     </head>
     <body>
         <div id="site-wrapper">
