MetaData (second part)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <title>Camille Brunel</title>
 	<meta property="og:type" content="website"/>
 	<meta property="og:title" content="Camille Brunel"/>
+	<meta property="og:site_name" content="Camille Brunel"/>
         <meta property="og:url" content="https://camillebr.github.io/"/>
-        <meta property="og:description" content="Personal website of Camille Brunel"/>
+        <meta property="og:description" content="Personal website of Camille Brunel, PhD in Computer Graphics"/>
+	<meta property="og:locale" content="en_US"/>
+	<link rel="canonical" href="https://camillebr.github.io/"/>
         <link rel="stylesheet" href="css/style.css" media="screen"/>
     </head>
     <body>
