--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <p class="Media-title"> A Time-independent Deformer for Elastic Contacts</p>
                         <p class="Media-authors"> <strong>Camille BRUNEL</strong>, <a href="https://www.labri.fr/perso/pbenard/" target="_blank">Pierre BENARD</a>, <a href="https://www.labri.fr/perso/guenneba/" target="_blank">Gaël GUENNEBAUD</a></p>
                         <p class="Media-conference"> ACM SIGGRAPH, 2021</p>
-                        <p class="Media-links"> <a href="https://hal.inria.fr/hal-03227883/document" target="_blank">PDF</a> | <a href="https://vimeo.com/547377135" target="_blank">Video</a> | Talk (Available soon!) </p>
+                        <p class="Media-links"> <a href="https://hal.inria.fr/hal-03227883/document" target="_blank">PDF</a> | <a href="https://vimeo.com/547377135" target="_blank">Video</a> | Talk (Available soon!) | <a href="Project_Elastic.html" >Project page</a></p>
                     </div>
                 </div>
 
@@ -67,7 +67,7 @@
                         <p class="Media-title"> A Time-independent Deformer for Elastic-rigid Contacts <p>
                         <p class="Media-authors"> <strong>Camille BRUNEL</strong>, <a href="https://www.labri.fr/perso/pbenard/" target="_blank">Pierre BENARD</a>, <a href="https://www.labri.fr/perso/guenneba/" target="_blank">Gaël GUENNEBAUD</a>, <a href="https://www.labri.fr/perso/barla/blog/" target="_blank">Pascal BARLA</a></p>
                         <p class="Media-conference"> Proceedings of the ACM on Computer Graphics and Interactive Techniques, 2020</p>
-                        <p class="Media-links"> <a href="https://hal.inria.fr/hal-02541299/document" target="_blank">PDF</a>  | <a href="https://vimeo.com/407545452" target="_blank">Video</a> | Talk (Available soon!) </p>
+                        <p class="Media-links"> <a href="https://hal.inria.fr/hal-02541299/document" target="_blank">PDF</a>  | <a href="https://vimeo.com/407545452" target="_blank">Video</a> | Talk (Available soon!) | <a href="Project_ElasticRigid.html" >Project page</a></p>
                     </div>
                 </div>
             </div>
