--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="section-content" >
                 <div>
                     <p>
-                        Feel free to contact me via <a href="https://www.linkedin.com/in/camille-brunel-9b507391" target="_blank">LinkedIn</a> or directly at: &nbsp; camille<strong> [dot] </strong>brunel<strong> [dot] </strong>phd<strong> [at] </strong>gmail<strong> [dot] </strong>fr
+                        Feel free to contact me via <a href="https://www.linkedin.com/in/camille-brunel-9b507391" target="_blank">LinkedIn</a> or directly at: &nbsp; camille<strong> [dot] </strong>brunel<strong> [dot] </strong>phd<strong> [at] </strong>gmail<strong> [dot] </strong>com
                     </p>
                 </div>
             </div>
